@@ -30,9 +30,9 @@ dependencies {
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.24.2'
-    implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.01'
-    implementation 'org.springframework:spring-jdbc:6.2.5'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.8.0.25.04'
+    implementation 'org.springframework:spring-jdbc:6.2.6'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
